[gd_scene load_steps=40 format=3 uid="uid://vcgyrd5lvipf"]

[ext_resource type="Script" path="res://main_bonus.gd" id="1_b2dh1"]
[ext_resource type="PackedScene" uid="uid://c48ihl1pkoxfj" path="res://sword.tscn" id="2_igauc"]
[ext_resource type="PackedScene" uid="uid://ltcudyjxydpw" path="res://ConfettiParticles.tscn" id="3_u5r8f"]
[ext_resource type="Texture2D" uid="uid://b2uo0720elbf2" path="res://stonechao.png" id="4_4hjvf"]
[ext_resource type="FontFile" uid="uid://d154bnr8aqaxq" path="res://kenvector_future_thin.ttf" id="5_iv4jv"]
[ext_resource type="Texture2D" uid="uid://cml62kflhehpn" path="res://Heart.png" id="6_8ydsj"]
[ext_resource type="Texture2D" uid="uid://c1csys88wpu01" path="res://energiamaligna.png" id="7_5fwqe"]
[ext_resource type="Script" path="res://Player.gd" id="7_ebhgg"]
[ext_resource type="Texture2D" uid="uid://bl2x08vux61ju" path="res://Player/BackSimples.png" id="8_i0hud"]
[ext_resource type="Texture2D" uid="uid://dxnu45uhhbnq4" path="res://Player/DeathSimples.png" id="9_pel4x"]
[ext_resource type="Texture2D" uid="uid://ykorvef4d2wp" path="res://Player/FrontSimples.png" id="10_py1r0"]
[ext_resource type="Texture2D" uid="uid://b38x2yt4xgech" path="res://Player/IdleSimples.png" id="11_ha0ud"]
[ext_resource type="Texture2D" uid="uid://co7p5qv3e852s" path="res://Player/WalkSimples.png" id="12_fqptd"]
[ext_resource type="Script" path="res://GameOver.gd" id="13_diqgk"]
[ext_resource type="AudioStream" uid="uid://be8nnsrqkk7dv" path="res://sons/fase3.wav" id="14_hlswk"]
[ext_resource type="Texture2D" uid="uid://b1fsfml7kfq6t" path="res://monster.png" id="14_l7ouu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68u0a"]
size = Vector2(532, 115.5)

[sub_resource type="Animation" id="Animation_whoi3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CoinsLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lgt61"]
resource_name = "ScoreIncreased"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CoinsLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ixifg"]
_data = {
"RESET": SubResource("Animation_whoi3"),
"ScoreIncreased": SubResource("Animation_lgt61")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ec6f5"]
atlas = ExtResource("8_i0hud")
region = Rect2(0, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qcsc"]
atlas = ExtResource("8_i0hud")
region = Rect2(13, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_co4aa"]
atlas = ExtResource("8_i0hud")
region = Rect2(26, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk0mg"]
atlas = ExtResource("8_i0hud")
region = Rect2(39, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2fme"]
atlas = ExtResource("9_pel4x")
region = Rect2(0, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_cga55"]
atlas = ExtResource("10_py1r0")
region = Rect2(0, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_win0t"]
atlas = ExtResource("10_py1r0")
region = Rect2(13, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5lr4"]
atlas = ExtResource("10_py1r0")
region = Rect2(26, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ju4w"]
atlas = ExtResource("10_py1r0")
region = Rect2(39, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_irdps"]
atlas = ExtResource("11_ha0ud")
region = Rect2(0, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_45ee0"]
atlas = ExtResource("11_ha0ud")
region = Rect2(13, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms82m"]
atlas = ExtResource("11_ha0ud")
region = Rect2(26, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6wrh"]
atlas = ExtResource("11_ha0ud")
region = Rect2(39, 0, 13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6utg"]
atlas = ExtResource("12_fqptd")
region = Rect2(0, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcj11"]
atlas = ExtResource("12_fqptd")
region = Rect2(15, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls7ei"]
atlas = ExtResource("12_fqptd")
region = Rect2(30, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7lug"]
atlas = ExtResource("12_fqptd")
region = Rect2(45, 0, 15, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_npms1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec6f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qcsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co4aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk0mg")
}],
"loop": true,
"name": &"Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2fme")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cga55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_win0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5lr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ju4w")
}],
"loop": true,
"name": &"Front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_irdps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45ee0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms82m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6wrh")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6utg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcj11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls7ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7lug")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62tl5"]
size = Vector2(5.88581, 13.4066)

[node name="MainBonus" type="Node"]
script = ExtResource("1_b2dh1")
coin = ExtResource("2_igauc")
confetti = ExtResource("3_u5r8f")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.513233, 0.513233, 0.513233, 1)
offset_left = -56.0
offset_top = -41.0
offset_right = 580.0
offset_bottom = 1046.0
texture = ExtResource("4_4hjvf")
stretch_mode = 1

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(28, -7)
scale = Vector2(0.867964, 0.981173)

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
modulate = Color(0.960784, 1, 1, 1)
position = Vector2(278, 110)
scale = Vector2(0.72028, 0.435065)
texture = ExtResource("14_l7ouu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(274, 111)
shape = SubResource("RectangleShape2D_68u0a")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CoinsLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = 1135.0
offset_right = 123.0
offset_bottom = 1203.0
grow_horizontal = 2
pivot_offset = Vector2(132, 34)
theme_override_fonts/font = ExtResource("5_iv4jv")
theme_override_font_sizes/font_size = 60
text = "coins: 0"

[node name="LevelLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 432.0
offset_top = 1035.0
offset_right = 719.0
offset_bottom = 1103.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_iv4jv")
theme_override_font_sizes/font_size = 60
text = "Level: 1"

[node name="UpButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -175.0
offset_right = 38.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="DownButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -86.0
offset_right = 38.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0

[node name="RightButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 53.0
offset_top = -86.0
offset_right = 128.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0

[node name="LeftButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -86.0
offset_right = -52.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0

[node name="HealthBar" type="TextureProgressBar" parent="UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10000.0
value = 10000.0
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("6_8ydsj")

[node name="InimigoLife" type="TextureProgressBar" parent="UI"]
layout_mode = 0
offset_left = 231.0
offset_top = -3.0
offset_right = 749.0
offset_bottom = 459.0
scale = Vector2(0.137025, 0.19965)
fill_mode = 5
texture_over = ExtResource("7_5fwqe")
texture_progress = ExtResource("7_5fwqe")

[node name="CoinsLabelAnimationPlayer" type="AnimationPlayer" parent="UI"]
libraries = {
"": SubResource("AnimationLibrary_ixifg")
}
speed_scale = 3.5

[node name="Player" type="Area2D" parent="." groups=["Player"]]
position = Vector2(270, 480)
scale = Vector2(3.05821, 3.05821)
script = ExtResource("7_ebhgg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_npms1")
animation = &"Walk"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2(1.44834, 0.961065)
shape = SubResource("RectangleShape2D_62tl5")

[node name="GameOver" type="Control" parent="."]
visible = false
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13_diqgk")

[node name="Background" type="ColorRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.882353)

[node name="GameOverTitle" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -189.0
offset_top = 33.0
offset_right = 190.0
offset_bottom = 101.0
grow_horizontal = 2
pivot_offset = Vector2(132, 34)
theme_override_fonts/font = ExtResource("5_iv4jv")
theme_override_font_sizes/font_size = 60
text = "Morreu de
queda dentro
de casa!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.5
offset_top = -80.0
offset_right = 190.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayAgainButton" type="Button" parent="GameOver/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_iv4jv")
theme_override_font_sizes/font_size = 50
text = "recomeçar"

[node name="HomeButton" type="Button" parent="GameOver/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_iv4jv")
theme_override_font_sizes/font_size = 50
text = "desistir"

[node name="Timer2" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_hlswk")
autoplay = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="button_down" from="UI/UpButton" to="Player" method="_on_up_button_button_down"]
[connection signal="button_up" from="UI/UpButton" to="Player" method="_on_up_button_button_up"]
[connection signal="button_down" from="UI/DownButton" to="Player" method="_on_down_button_button_down"]
[connection signal="button_up" from="UI/DownButton" to="Player" method="_on_down_button_button_up"]
[connection signal="button_down" from="UI/RightButton" to="Player" method="_on_right_button_button_down"]
[connection signal="button_up" from="UI/RightButton" to="Player" method="_on_right_button_button_up"]
[connection signal="button_down" from="UI/LeftButton" to="Player" method="_on_left_button_button_down"]
[connection signal="button_up" from="UI/LeftButton" to="Player" method="_on_left_button_button_up"]
[connection signal="area_entered" from="Player" to="Player" method="_on_area_entered"]
[connection signal="pressed" from="GameOver/VBoxContainer/PlayAgainButton" to="GameOver" method="_on_play_again_button_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/HomeButton" to="GameOver" method="_on_home_button_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
